# libidk

./: CMakeLists.txt  build.sh  dummy.cpp  dump.txt
libidk/: idk_export.hpp  idk_platform.hpp  idk_view.hpp  libidk.hpp
libidk/IDKcommon/: CMakeLists.txt  idk_assert.cpp  idk_assert.hpp  idk_debug.hpp
libidk/IDKcontainers/: CMakeLists.txt  idk_allocator.hpp  idk_buffer.hpp  idk_graph.hpp  idk_heap_allocation.cpp  idk_heap_allocator.cpp  idk_stack.hpp  idk_transform.cpp  idk_transform.hpp  idk_vector.hpp
libidk/IDKcore/: CMakeLists.txt  idk_identifiable.hpp  idk_initializable.hpp  idk_utility.cpp  libidk.hpp
libidk/IDKcore/idk_SDL2/: IDKSDL2.hpp
libidk/IDKcore/idk_bytes/: idk_bytes.cpp
libidk/IDKcore/idk_datastructures/: datastructures.hpp  idk_graph.hpp  idk_stack.hpp  idk_transform.hpp
libidk/IDKgl/: CMakeLists.txt  common.hpp  idk_glBindings.cpp  idk_glBindings.hpp  idk_glDrawCommand.hpp  idk_glFramebuffer.cpp  idk_glFramebuffer.hpp  idk_glSSBO.cpp  idk_glShader.cpp  idk_glShader.hpp  idk_glTexture.cpp  idk_glTexture.hpp  idk_glUBO.cpp  idk_glUBO.hpp  idk_gltools.cpp  idk_gltools.hpp
libidk/libidk/: CMakeLists.txt
src/: idk_allocator.hpp  idk_export.hpp  idk_math.cpp  idk_sdl2.hpp  idk_transform.hpp
src/GL/: common.hpp  idk_glInstancedata.cpp  idk_glSSBO.hpp  idk_glShader.cpp  idk_glTexture.cpp  idk_glTexture.hpp  idk_glXXBO.hpp  idk_glm.hpp
src/containers/: idk_heap_allocation.hpp
src/libidk/: forward_declarations.hpp  idk_allocator.hpp  idk_allocator_fixed.hpp  idk_allocator_id.hpp  idk_ansi.hpp  idk_api_loader.cpp  idk_api_loader.hpp  idk_assert.cpp  idk_assert.hpp  idk_bitmanip.hpp  idk_bitset.hpp  idk_buffer.cpp  idk_buffer.hpp  idk_bytestream.hpp  idk_ccpscript_manager.cpp  idk_ccpscript_manager.hpp  idk_componentsystem.hpp  idk_cppscript.cpp  idk_cppscript.hpp  idk_dynamiclib.cpp  idk_dynamiclib.hpp  idk_eventemitter.hpp  idk_eventmanager.hpp  idk_export.hpp  idk_file.cpp  idk_file.hpp  idk_game.hpp  idk_gamestate.cpp  idk_gamestate.hpp  idk_geometry.cpp  idk_geometry.hpp  idk_gl.hpp  idk_gl_headless.cpp  idk_gl_headless.hpp  idk_glm.cpp  idk_glm.hpp  idk_heap_allocator.hpp  idk_ibuffer.hpp  idk_identifiable.hpp  idk_idkvi_file.cpp  (+61 more)
src/libidk/GL/: CMakeLists.txt  IDKgl.hpp  common.cpp  common.hpp  idk_Framebuffer.cpp  idk_Framebuffer.hpp  idk_glBindings.cpp  idk_glBindings.hpp  idk_glDrawCommand.hpp  idk_glFramebuffer.cpp  idk_glFramebuffer.hpp  idk_glIDB.hpp  idk_glInstancedata.hpp  idk_glShaderGen.hpp  idk_glShaderProgram.cpp  idk_glShaderProgram.hpp  idk_glShaderStage.cpp  idk_glShaderStage.hpp  idk_glShaderTools.cpp  idk_glShaderTools.hpp  idk_glTexture.cpp  idk_glTexture.hpp  idk_glUBO.cpp  idk_glUBO.hpp  idk_glXXBO.hpp  idk_gltools.cpp  idk_gltools.hpp
src/libidk/IDKcommon/: CMakeLists.txt  libidk.hpp
src/libidk/IDKcommon/idk_bytes/: idk_bytes.cpp  idk_bytes.hpp
src/libidk/IDKcommon/idk_datastructures/: datastructures.hpp  datastructures_decl.hpp  idk_buffer.hpp  idk_pair.hpp  idk_transform.cpp  idk_transform.hpp
src/libidk/IDKcommon/idk_debug/: idk_debug.cpp
src/libidk/IDKgl/: idk_glBindings.cpp  idk_glBindings.hpp  idk_glFramebuffer.cpp  idk_glFramebuffer.hpp  idk_glShadowAtlas.hpp  idk_glUBO.cpp  idk_glUBO.hpp  idk_gltools.cpp
src/libidk/containers/: idk_vector.hpp
src/libidk/memory/: CMakeLists.txt  allocated_object.cpp  allocated_object.hpp  atomic_ringbuffer.hpp  base_allocator.hpp  common.cpp  common.hpp  cringe_ptr.hpp  fixed_array.hpp  fixed_stack.hpp  fixed_vector.hpp  idk_alloc_assert.cpp  idk_alloc_assert.hpp  idk_frame_allocator.hpp  idk_linear_allocator.hpp  idk_memory.cpp  idk_memory.hpp  idk_memory_system.hpp  linear_allocator.cpp  linear_allocator.hpp  lockfree_queue.hpp  pool_allocator.cpp  pool_allocator.hpp  ring_allocator.cpp  ring_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp  stack_ptr.cpp  stack_ptr.hpp  threadsafe_queue.hpp  threadsafe_ringbuffer.hpp  tmp_vector.hpp
src/libidk/scripting/: CMakeLists.txt  idk_scripting.cpp  idk_scripting.hpp  luaaa.hpp
src/libidk/scripting/luajit/: CMakeLists.txt
src/libidk/scripting/luajit/include/: buildvm_arch.h
